keycloak-k8s/05_keycloak.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: backend
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: keycloak
#  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: backend
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:21.0.2
        args: ["start-dev"]
        ports:
        - name: http
          containerPort: 8080
#        readinessProbe:
#          httpGet:
#            path: /health/ready
#            port: 8080
#          initialDelaySeconds: 250
#          periodSeconds: 10
#        livenessProbe:
#          httpGet:
#            path: /health/live
#            port: 8080
#          initialDelaySeconds: 500
#          periodSeconds: 30
