keycloak-k8s/06_ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
  namespace: backend
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - match:
        - uri:
            prefix: "/*"
      route:
        - destination:
            host: keycloak.backend.svc.cluster.local
            port:
              number: 80
